complete collection part

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         <li class="none"><a class="none-2" href="">Products</a></li>
         <li class="none"><a class="none-2" href="">Sign Up</a></li>
         <li class="none"><a class="none-2" href="">Log in</a></li>
-        <li class="none"><a class="none-2" href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
-        <li class="none"><a class="none-2" href=""><i class="fa-solid fa-cart-shopping"></i></a></li>
+        <!-- <li class="none"><a class="none-2" href=""><i class="fa-solid fa-magnifying-glass"></i></a></li>
+        <li class="none"><a class="none-2" href=""><i class="fa-solid fa-cart-shopping"></i></a></li> -->
       </ul>
     </nav>
     <!-- nav style end -->
@@ -55,7 +55,82 @@
       </div>
     </section>
   </header>
-  <main></main>
+  <!-- end head -->
+  <main>
+    <section class="collection">
+      <div class="collection-heading-center">
+        <h2 class="collection-heading">Popular Collection</h2>
+      </div>
+
+      <div class="collectin-card">
+        <div class="popular">
+          <img class="card-img" src="./images/tripod.png" alt="">
+          <h4 class="card-title">Flex Tripod</h4>
+          <p class="price-tag">$50.48</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/mic.png" alt="">
+          <h4 class="card-title">microphone</h4>
+          <p class="price-tag">$120.25</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/airpod.png" alt="">
+          <h4 class="card-title">Airbuds</h4>
+          <p class="price-tag">$100.00</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/drone.png" alt="">
+          <h4 class="card-title">Drone</h4>
+          <p class="price-tag">$980.25</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/lights.png" alt="">
+          <h4 class="card-title">Light Setup</h4>
+          <p class="price-tag">$1200.00</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/setup.png" alt="">
+          <h4 class="card-title">Photoshoot set</h4>
+          <p class="price-tag">$820.40</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/camera.png" alt="">
+          <h4 class="card-title">Vlogging Camera</h4>
+          <p class="price-tag">$1800.80</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/single-light.png" alt="">
+          <h4 class="card-title">Green Screen</h4>
+          <p class="price-tag">$25.48</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+        <div class="popular">
+          <img class="card-img" src="./images/action.png" alt="">
+          <h4 class="card-title">Action Camera</h4>
+          <p class="price-tag">$380.00</p>
+          <p class="card-description">Wordwide shifting available
+            Buyers protection possible!</p>
+        </div>
+
+
+      </div>
+    </section>
+  </main>
   <footer></footer>
 </body>
 
