resolve collection part

--- a/index.html
+++ b/index.html
@@ -61,7 +61,6 @@
       <div class="collection-heading-center">
         <h2 class="collection-heading">Popular Collection</h2>
       </div>
-
       <div class="collectin-card">
         <div class="popular">
           <img class="card-img" src="./images/tripod.png" alt="">
@@ -126,9 +125,21 @@
           <p class="card-description">Wordwide shifting available
             Buyers protection possible!</p>
         </div>
-
-
       </div>
+      <div class="see-more-parent ">
+        <a class="see-more" href="">See More <i class="fa-solid fa-arrow-right"></i></a>
+      </div>
+
+
+
+
+
+
+      <!-- <button class="btn-2">See More <i class="fa-solid fa-arrow-right"></i></button> -->
+      <!-- <div class="see-more-parent">
+        <a class="see-more" href="">See More <i class="fa-solid fa-arrow-right"></i> </a>
+      </div> -->
+
     </section>
   </main>
   <footer></footer>
