featured section done

--- a/index.html
+++ b/index.html
@@ -129,18 +129,22 @@
       <div class="see-more-parent ">
         <a class="see-more" href="">See More <i class="fa-solid fa-arrow-right"></i></a>
       </div>
-
-
-
-
-
-
-      <!-- <button class="btn-2">See More <i class="fa-solid fa-arrow-right"></i></button> -->
-      <!-- <div class="see-more-parent">
-        <a class="see-more" href="">See More <i class="fa-solid fa-arrow-right"></i> </a>
-      </div> -->
-
     </section>
+    <!-- end collection part -->
+
+    <!-- start featured section -->
+    <section class="featured">
+      <div class="featured-img">
+        <img class="featured-img-inner" src="./images/gear.png" alt="">
+      </div>
+      <div class="featured-container">
+        <h1 class="featured-title">Featured products at one place</h1>
+        <p class="featured-description">Amet minim mollit non deserunt ullamco est sit aliqua dolor <br> do amet
+          sint.Velit officia consequat duis enim velit mollit. <br> Exercitation veniam consequat sunt nostrud amet.</p>
+        <button class="btn-third">Join Now <i class="fa-solid fa-arrow-right"></i></button>
+      </div>
+    </section>
+    <!-- end featured section -->
   </main>
   <footer></footer>
 </body>
