complete full landing page

--- a/index.html
+++ b/index.html
@@ -146,7 +146,27 @@
     </section>
     <!-- end featured section -->
   </main>
-  <footer></footer>
+  <footer>
+    <section class="footer">
+      <div class="footer-text-container">
+        <h2 class="footer-title">Influencer products</h2>
+        <p class="footer-description">Copyright © 2020 influencer products<br>All rights reserved</p>
+      </div>
+      <div class="footer-icon">
+        <a class="messi" href=""><i class="fa-brands fa-instagram"></i></a>
+        <a class="messi" href=""><i class="fa-regular fa-futbol"></i></a>
+        <a class="messi" href=""><i class="fa-brands fa-twitter"></i></a>
+        <a class="messi" href=""><i class="fa-brands fa-youtube"></i></a>
+
+
+
+
+      </div>
+    </section>
+
+
+
+  </footer>
 </body>
 
 </html>
